// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Input Basic Usage 1`] = `
Object {
  "docs": "Styles or abstracts HTML input elements.",
  "html": "<input
  placeholder=\\"Input\\"
  class=\\"drac-input drac-input-white drac-text-white\\"
/>
",
  "react": "<Input placeholder=\\"Input\\" color=\\"white\\" />;
",
  "title": "Usage",
}
`;

exports[`Site: Input BorderSizes 1`] = `
Object {
  "docs": "Border size can be customize to use several different sizes.",
  "html": "<div class=\\"drac-box\\">
  <input
    placeholder=\\"small border outline\\"
    class=\\"drac-input drac-input-border-sm drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"small border outline\\"
    class=\\"drac-input drac-input-outline drac-input-border-sm drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"medium border outline\\"
    class=\\"drac-input drac-input-border-md drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"medium border outline\\"
    class=\\"drac-input drac-input-outline drac-input-border-md drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"large border outline\\"
    class=\\"drac-input drac-input-border-lg drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"large border outline\\"
    class=\\"drac-input drac-input-outline drac-input-border-lg drac-input-white drac-text-white drac-m-xs\\"
  />
</div>
",
  "react": "<Box>
  <Input
    color=\\"white\\"
    variant=\\"normal\\"
    borderSize=\\"small\\"
    placeholder=\\"small border outline\\"
    m=\\"xs\\"
  />
  <Input
    color=\\"white\\"
    variant=\\"outline\\"
    borderSize=\\"small\\"
    placeholder=\\"small border outline\\"
    m=\\"xs\\"
  />
  <Input
    color=\\"white\\"
    variant=\\"normal\\"
    borderSize=\\"medium\\"
    placeholder=\\"medium border outline\\"
    m=\\"xs\\"
  />
  <Input
    color=\\"white\\"
    variant=\\"outline\\"
    borderSize=\\"medium\\"
    placeholder=\\"medium border outline\\"
    m=\\"xs\\"
  />
  <Input
    color=\\"white\\"
    variant=\\"normal\\"
    borderSize=\\"large\\"
    placeholder=\\"large border outline\\"
    m=\\"xs\\"
  />
  <Input
    color=\\"white\\"
    variant=\\"outline\\"
    borderSize=\\"large\\"
    placeholder=\\"large border outline\\"
    m=\\"xs\\"
  />
</Box>;
",
  "title": "BorderSizes",
}
`;

exports[`Site: Input Colors 1`] = `
Object {
  "docs": "Inputs can be customized to use any of the Dracula UI theme colors.",
  "html": "<div class=\\"drac-box\\">
  <input
    placeholder=\\"purple\\"
    class=\\"drac-input drac-input-purple drac-text-purple drac-m-xs\\"
  /><input
    placeholder=\\"green\\"
    class=\\"drac-input drac-input-green drac-text-green drac-m-xs\\"
  />
</div>
",
  "react": "<Box>
  <Input color=\\"purple\\" placeholder=\\"purple\\" m=\\"xs\\" />
  <Input color=\\"green\\" placeholder=\\"green\\" m=\\"xs\\" />
</Box>;
",
  "title": "Colors",
}
`;

exports[`Site: Input Sizes 1`] = `
Object {
  "docs": "Inputs can be customize to use several different sizes.",
  "html": "<div class=\\"drac-box\\">
  <input
    placeholder=\\"small\\"
    class=\\"drac-input drac-input-sm drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"medium\\"
    class=\\"drac-input drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"large\\"
    class=\\"drac-input drac-input-lg drac-input-white drac-text-white drac-m-xs\\"
  />
</div>
",
  "react": "<Box>
  <Input color=\\"white\\" size=\\"small\\" placeholder=\\"small\\" m=\\"xs\\" />
  <Input color=\\"white\\" size=\\"medium\\" placeholder=\\"medium\\" m=\\"xs\\" />
  <Input color=\\"white\\" size=\\"large\\" placeholder=\\"large\\" m=\\"xs\\" />
</Box>;
",
  "title": "Sizes",
}
`;

exports[`Site: Input Type 1`] = `
Object {
  "docs": "Use the \`type\` property to define what kind of HTML input you would like to use",
  "html": "<div class=\\"drac-box\\">
  <input
    placeholder=\\"Password\\"
    type=\\"password\\"
    class=\\"drac-input drac-input-white drac-text-white drac-my-sm\\"
  /><input
    placeholder=\\"Date\\"
    type=\\"date\\"
    class=\\"drac-input drac-input-white drac-text-white drac-my-sm\\"
  /><input
    placeholder=\\"Email\\"
    type=\\"email\\"
    class=\\"drac-input drac-input-white drac-text-white drac-my-sm\\"
  /><input
    placeholder=\\"Number\\"
    type=\\"number\\"
    class=\\"drac-input drac-input-white drac-text-white drac-my-sm\\"
  /><input
    placeholder=\\"Range\\"
    type=\\"range\\"
    class=\\"drac-input drac-input-white drac-text-white drac-my-sm\\"
  /><input
    placeholder=\\"Telephone\\"
    type=\\"tel\\"
    class=\\"drac-input drac-input-white drac-text-white drac-my-sm\\"
  />
</div>
",
  "react": "<Box>
  <Input my=\\"sm\\" color=\\"white\\" placeholder=\\"Password\\" type=\\"password\\" />
  <Input my=\\"sm\\" color=\\"white\\" placeholder=\\"Date\\" type=\\"date\\" />
  <Input my=\\"sm\\" color=\\"white\\" placeholder=\\"Email\\" type=\\"email\\" />
  <Input my=\\"sm\\" color=\\"white\\" placeholder=\\"Number\\" type=\\"number\\" />
  <Input my=\\"sm\\" color=\\"white\\" placeholder=\\"Range\\" type=\\"range\\" />
  <Input my=\\"sm\\" color=\\"white\\" placeholder=\\"Telephone\\" type=\\"tel\\" />
</Box>;
",
  "title": "Type",
}
`;

exports[`Site: Input Variants 1`] = `
Object {
  "docs": "Use the \`outline\` variant to represent subtler text Inputs",
  "html": "<div class=\\"drac-box\\">
  <input
    placeholder=\\"normal\\"
    class=\\"drac-input drac-input-white drac-text-white drac-m-xs\\"
  /><input
    placeholder=\\"outline\\"
    class=\\"drac-input drac-input-outline drac-input-white drac-text-white drac-m-xs\\"
  />
</div>
",
  "react": "<Box>
  <Input color=\\"white\\" variant=\\"normal\\" placeholder=\\"normal\\" m=\\"xs\\" />
  <Input color=\\"white\\" variant=\\"outline\\" placeholder=\\"outline\\" m=\\"xs\\" />
</Box>;
",
  "title": "Variants",
}
`;
